[project]
name = "ruff-example"
version = "0.1.0"
description = "ruff example project"
authors = [
    { name = "yoneya.takashi", email = "takashi002013@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
